[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Controls/DialogWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/SellTransactionDialog.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Controls/DataPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TransactionLog.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/JosefinSansRegular-x3LYV.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Controls/TextInput.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 20
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 20
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 5 )

[node name="SellTransactionDialog" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="OverlayMaskButton" parent="." index="0"]
modulate = Color( 0, 0, 0, 0.392157 )

[node name="DialogContainer" parent="CenterContainer" index="0"]
margin_left = 28.0
margin_top = 27.0
margin_right = 996.0
margin_bottom = 572.0
rect_min_size = Vector2( 968, 545 )

[node name="BackgroundColor" parent="CenterContainer/DialogContainer" index="0"]
margin_right = 6.10352e-05
rect_min_size = Vector2( 968, 545 )

[node name="MarginContainer" parent="CenterContainer/DialogContainer" index="1"]
margin_right = 6.10352e-05
margin_bottom = -16.0
rect_min_size = Vector2( 968, 545 )

[node name="CenterContainer" parent="CenterContainer/DialogContainer/MarginContainer" index="0"]
margin_right = 952.0
margin_bottom = 545.0
rect_min_size = Vector2( 936, 545 )

[node name="VBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer" index="0"]
margin_left = 8.0
margin_top = 11.0
margin_right = 928.0
margin_bottom = 534.0
custom_constants/separation = 8

[node name="DialogTitle" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 920.0
margin_bottom = 41.0
rect_min_size = Vector2( 920, 41 )

[node name="MarginContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogTitle" index="0"]
margin_bottom = 0.0

[node name="Title" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogTitle/MarginContainer" index="0"]
margin_right = 912.0
margin_bottom = 34.0
text = "Sell Transaction"

[node name="HBoxInputContainer" type="HBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_top = 49.0
margin_right = 920.0
margin_bottom = 99.0
rect_min_size = Vector2( 920, 0 )
custom_constants/separation = 16

[node name="NumberOfCoins" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxInputContainer" index="0" instance=ExtResource( 6 )]
margin_right = 452.0
margin_bottom = 50.0

[node name="Label" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxInputContainer/NumberOfCoins" index="6"]
custom_fonts/font = SubResource( 1 )
text = "Number of Coins"

[node name="AmountToSell" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxInputContainer" index="1" instance=ExtResource( 6 )]
margin_left = 468.0
margin_right = 920.0
margin_bottom = 50.0

[node name="Label" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxInputContainer/AmountToSell" index="6"]
custom_fonts/font = SubResource( 2 )
text = "Amount to Sell"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="2"]
margin_top = 107.0
margin_right = 920.0
margin_bottom = 203.0
rect_min_size = Vector2( 920, 96 )
custom_constants/separation = 16

[node name="TotalCoins" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 218.0
margin_bottom = 96.0

[node name="ColorRect" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalCoins/MarginContainer" index="0"]
margin_right = 218.0
margin_bottom = 88.0

[node name="CenterContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalCoins/MarginContainer" index="1"]
margin_right = 218.0
margin_bottom = 88.0

[node name="VBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalCoins/MarginContainer/CenterContainer" index="0"]
margin_left = 58.0
margin_top = 13.0
margin_right = 160.0
margin_bottom = 66.0

[node name="Title" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalCoins/MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 102.0
text = "Total Coins"

[node name="HBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalCoins/MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_right = 102.0

[node name="TotalAmountPaid" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 234.0
margin_right = 452.0
margin_bottom = 96.0

[node name="ColorRect" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer" index="0"]
margin_right = 218.0
margin_bottom = 88.0

[node name="CenterContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer" index="1"]
margin_right = 218.0
margin_bottom = 88.0

[node name="VBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer" index="0"]
margin_left = 63.0
margin_top = 13.0
margin_right = 155.0
margin_bottom = 66.0

[node name="Title" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 92.0
text = "Total Paid"

[node name="HBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalAmountPaid/MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_right = 92.0

[node name="CostAverage" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 468.0
margin_right = 686.0
margin_bottom = 96.0

[node name="ColorRect" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CostAverage/MarginContainer" index="0"]
margin_right = 218.0
margin_bottom = 88.0

[node name="CenterContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CostAverage/MarginContainer" index="1"]
margin_right = 218.0
margin_bottom = 88.0

[node name="VBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer" index="0"]
margin_left = 49.0
margin_top = 13.0
margin_right = 169.0
margin_bottom = 66.0

[node name="Title" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 120.0
text = "Cost Average"

[node name="HBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CostAverage/MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_right = 120.0

[node name="TotalProfit" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer" index="3" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 702.0
margin_right = 920.0
margin_bottom = 96.0

[node name="ColorRect" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalProfit/MarginContainer" index="0"]
margin_right = 218.0
margin_bottom = 88.0

[node name="CenterContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalProfit/MarginContainer" index="1"]
margin_right = 218.0
margin_bottom = 88.0

[node name="VBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalProfit/MarginContainer/CenterContainer" index="0"]
margin_left = 56.0
margin_top = 13.0
margin_right = 161.0
margin_bottom = 66.0

[node name="Title" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalProfit/MarginContainer/CenterContainer/VBoxContainer" index="0"]
margin_right = 105.0
text = "Total Profit"

[node name="HBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalProfit/MarginContainer/CenterContainer/VBoxContainer" index="1"]
margin_right = 105.0

[node name="TransactionLog" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 211.0
margin_right = 920.0
margin_bottom = 475.0
rect_min_size = Vector2( 920, 264 )

[node name="MarginContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog" index="0"]
margin_right = 0.0
margin_bottom = 0.0
rect_min_size = Vector2( 920, 264 )

[node name="BackgroundColor" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer" index="0"]
margin_bottom = 248.0

[node name="VBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer" index="1"]
margin_bottom = 248.0

[node name="HBoxContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/TransactionColumns/CenterContainer" index="0"]
margin_left = 135.0
margin_right = 785.0

[node name="BlankSpace" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/TransactionColumns/CenterContainer/HBoxContainer" index="0"]
visible = false

[node name="SelectAll" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/TransactionColumns/CenterContainer/HBoxContainer" index="1"]
visible = false
margin_left = 0.0
margin_right = 63.0

[node name="DateAcquired" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/TransactionColumns/CenterContainer/HBoxContainer" index="2"]
margin_left = 0.0
margin_right = 123.0

[node name="NumberOfCoins" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/TransactionColumns/CenterContainer/HBoxContainer" index="3"]
margin_left = 127.0
margin_right = 266.0

[node name="ExchangePrice" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/TransactionColumns/CenterContainer/HBoxContainer" index="4"]
margin_left = 270.0
margin_right = 397.0

[node name="CreditAmount" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/TransactionColumns/CenterContainer/HBoxContainer" index="5"]
margin_left = 401.0
margin_right = 524.0

[node name="DebitAmount" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/TransactionColumns/CenterContainer/HBoxContainer" index="6"]
margin_left = 528.0
margin_right = 650.0

[node name="ScrollContainer" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer" index="2"]
margin_bottom = 240.0

[node name="Trasactions" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/ScrollContainer" index="0"]
margin_bottom = 120.0

[node name="AddActionButton" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog" index="1"]
visible = false

[node name="DialogActionButtons" parent="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer" index="4"]
margin_top = 483.0
margin_right = 920.0
margin_bottom = 523.0
rect_min_size = Vector2( 920, 40 )

[connection signal="text_changed" from="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxInputContainer/NumberOfCoins" to="." method="_on_NumberOfCoins_text_changed"]
[connection signal="text_changed" from="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxInputContainer/AmountToSell" to="." method="_on_AmountToSell_text_changed"]
[connection signal="CalcualteTotalPrice" from="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_CalcualteTotalPrice"]
[connection signal="CalculateCostAverage" from="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_CalculateCostAverage"]
[connection signal="CalculatedNumberOfCoins" from="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog" to="." method="_on_TransactionLog_CalculatedNumberOfCoins"]
[connection signal="CancelClicked" from="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons" to="." method="_on_DialogActionButtons_CancelClicked"]
[connection signal="OkClicked" from="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons" to="." method="_on_DialogActionButtons_OkClicked"]

[editable path="CenterContainer/DialogContainer"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogTitle"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxInputContainer/NumberOfCoins"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxInputContainer/AmountToSell"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalCoins"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalAmountPaid"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CostAverage"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/TotalProfit"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/ActionButtonContainer"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/SplitButton"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/EditButton"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/DeleteButton"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/MarginContainer/VBoxContainer/TransactionColumns"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/TransactionLog/SellActionButton"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons/HBoxContainer/OkButton"]
[editable path="CenterContainer/DialogContainer/MarginContainer/CenterContainer/VBoxContainer/DialogActionButtons/HBoxContainer/CancelButton"]
